--- a/style.css
+++ b/style.css
@@ -1,30 +1,73 @@
-*{
+* {
     font-family: poppins, sans-serif;
     padding: 0;
     margin: 0;
 }
 
-.pl:hover{
+.pl:hover {
     color: #ffc107;
 }
-.bd{
+
+.bd {
     height: 10px;
     width: 110px;
 }
-.bc{
+
+.bc {
     height: 10px;
     width: 90px;
 }
-.bak-bnr{
+
+.bak-bnr {
     width: 100%;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     box-shadow: 0px -1px 10px grey;
 }
-.crd-bck{
+
+.crd-bck {
     background-color: rgb(224, 223, 223);
 }
-.crd-bck:hover{
+
+.crd-bck:hover {
     background-color: #f9be20;
+}
+
+.cntbnr {
+    margin-top: 100px;
+}
+
+.cntbtn {
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+.map {
+    filter: contrast(0.8);
+}
+
+.social_icon {
+    padding-top: 14px;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    font-size: 16px;
+}
+
+.social_icon:hover {
+    height: 50px;
+    width: 50px;
+    background-color: black;
+    border-radius: 25px;
+}
+
+.f_link {
+    color: white;
+    text-decoration: none;
+    display: block;
+}
+
+.f_link a:hover {
+    color: #f9be20;
 }
